play correctly item-preview card's hover effect animation on IE
issue #90

--- a/scss/main/_item_preview.scss
+++ b/scss/main/_item_preview.scss
@@ -18,9 +18,9 @@
             width: 26px;
 
             .type-desc-container {
-                width: 0; 
+                width: 0;
             }
-        } 
+        }
 	}
 
     .type {
@@ -46,11 +46,10 @@
 			background: $yellow3;
 		}
 	}
-		
+
 	.white-part1 {
-		position: relative;
+		  position: relative;
 	  	border-bottom: 150px solid #ffffff;
-	  	transition: width 1s;
 	  	width: 292px;
 	  	top: 0px;
 
@@ -62,7 +61,11 @@
 	  		border-left: 42px solid transparent;
 	  	}
 
-	  	&--nothumb {
+      &--thumbnail {
+        transition: width 1s;
+      }
+
+      &--nothumb {
 			width: 100%;
 
 			.en & {
@@ -101,10 +104,10 @@
 
 		code {
             font-family: inherit;
-            
+
             &:before, &:after {
                 content: "'";
-            }   
+            }
         }
 
 		&--nothumb {
@@ -112,14 +115,14 @@
 			width: 90%;
 		}
         p {
-            display: inline; 
+            display: inline;
             a {
                 pointer-events: none;
                 text-decoration: none;
                 color: $gray3;
             }
 	    }
-    }	
+    }
 
 	.thumbnail {
 		position: absolute;
@@ -150,7 +153,7 @@
 
 	.remove {
 		width: 18px;
-		height: 20px;	
+		height: 20px;
 		overflow: hidden;
 		margin-top: 8px;
 
